--- a/views/register/register.ejs
+++ b/views/register/register.ejs
@@ -7,7 +7,7 @@
   <title>Register</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
-  <link rel="stylesheet" href="/public/css/register.css" />
+  <link rel="stylesheet" href="/css/register.css" />
 </head>
 
 <body>
@@ -18,16 +18,17 @@
         <p>Nombre de la institución</p>
         <div class="input-group mb-3">
           <input type="text" class="form-control" aria-label="Recipient's username" aria-describedby="basic-addon2"
-            required placeholder="Nombre, °Número." />
+            required placeholder="Instituto Politecnico Formosa" />
         </div>
 
         <p>Categoria</p>
         <div class="input-group mb-2">
-          <select name="categoria" id="categoria" value="categoria">
+          <select class="form-select" name="categoria" id="categoria" value="categoria">
             <option value="1">Publica</option>
             <option value="2">Privada</option>
             <option value="3">Semi-privada</option>
           </select>
+
         </div>
 
         <p>Ubicación </p>
