Se agregaron rutas

--- a/views/register/register.ejs
+++ b/views/register/register.ejs
@@ -23,7 +23,7 @@
 
         
         <p>Categoria</p>
-        <div class="input-group mb-2">
+        <div class="input-group form-select mb-2">
           <select class="form-select" name="categoria" id="categoria" value="categoria">
             <option value="1">Publica</option>
             <option value="2">Privada</option>
