--- a/public/css/register.css
+++ b/public/css/register.css
@@ -12,11 +12,14 @@ main {
   padding-bottom: 3%;
 }
 
+#categoria {
+  border: #114161;
+}
+
 .Register {
   display: flex;
   flex-direction: column;
-  width: 25%;
-  height: 25%;
+  width: 55%;
   background-color: white;
   border: 22px solid;
   border-radius: 2rem;
@@ -26,9 +29,9 @@ main {
 }
 
 button:hover {
-transition: 0.2s ease-in-out;
-background-color: #4b95c7 !important ;  
-border-color: #4b95c7 !important;
+  transition: 0.2s ease-in-out;
+  background-color: #4b95c7 !important;
+  border-color: #4b95c7 !important;
 }
 
 .boton {
@@ -40,10 +43,14 @@ border-color: #4b95c7 !important;
 }
 
 @media screen and (max-width: 768px) {
-    .Register {
-        width: 70%;
-    }
+  .Register {
+    width: 70%;
+  }
 }
+
 .Registrar {
-    padding-bottom: 5%;
+  display: flex;
+  justify-content: center;
+  padding-bottom: 5%;
+
 }
