--- a/views/register/register.ejs
+++ b/views/register/register.ejs
@@ -24,9 +24,9 @@
         <p>Categoria</p>
         <div class="input-group mb-2">
           <select name="categoria" id="categoria" value="categoria">
-            <option id="1" value="">Publica</option>
-            <option id="2" value="">Privada</option>
-            <option id="3" value="">Semi-privada</option>
+            <option value="1">Publica</option>
+            <option value="2">Privada</option>
+            <option value="3">Semi-privada</option>
           </select>
         </div>
 
