--- a/views/user.institute/index.ejs
+++ b/views/user.institute/index.ejs
@@ -1,86 +1,128 @@
 <%- include('./partials/header.ejs'); %>
 
-<header id="cabecera">
-    <nav aria-label="breadcrumb d-flex align-content-center">
-        <ol class="breadcrumb p-3 mb-1" style="height: 70px;">
-            <li class="breadcrumb-item">
-                <div class="logo">
-                <a class="navbar-brand" href="../home/home.html">
-                </a>
+    <header id="cabecera">
+        <nav aria-label="breadcrumb d-flex align-content-center">
+            <ol class="breadcrumb p-3 mb-1" style="height: 70px;">
+                <li class="breadcrumb-item">
+                    <a class="navbar-brand" href="../home/home.html">
+                        <div class="logo"></div>
+                    </a>
+                </li>
+                <li class="breadcrumb-item active" aria-current="page">Perfil</li>
+            </ol>
+        </nav>
+    </header>
+
+
+    <main>
+        <section>
+            <div class="col-lg-12  pt-2" id="info">
+
+                <div>
+
+                    <div class="col-lg-3 mb-4 perfil">
+                        <img src="/img/profile_logo.png" width="210px" alt="Profile Picture">
+                    </div>
+                    <div class="botones ">
+                        <button type="button" class="btn btn-secondary btn-sm boton  mb-4" style="text-decoration: none"><a href="">Editar perfil</a></button>
+
+
+                        <button type="button" class="btn btn-secondary btn-sm boton  mb-4 " style="text-decoration: none"><a href="/register/register.html">Cerrar sesión</a></button>
+
+                    </div>
+                </div>
+
+                <div class="ubi mb-3">
+                    <div class="card-body">
+                        <h1>UBICACIÓN </h1>
+                    </div>
+                </div>
+
+
+        </section>
+
+
+
+
+        <article>
+
+            <div class="card mb-5 me-3">
+                <div class="card-body">
+
+                    <h1>NOMBRE DE INSTITUCION</h1>
+                    <p></p>
+                    <p>[UBICACIÓN]</p>
+
+                    <h2>Descripción del usuario</h2>
+                    <h5 class="card-title"></h5>
+                    <ul>
+                        <li>...</li>
+                        <li>...</li>
+                        <li>...</li>
+                        <li>...</li>
+                    </ul>
+                </div>
             </div>
-            </li>
-            <li class="breadcrumb-item active" aria-current="page">Buscar</li>
-        </ol>
-    </nav>
-</header>
 
+            <div class="card mb-5">
 
-<main>
-    <section>
+                <div class="card-body">
+                    <div class="config">
+                        <h1>Historial de reseñas</h1>
 
-        <div class="col-lg-12 info pt-2" >
+                    </div>
 
+                    <p>Tuve el privilegio de ser parte de la comunidad estudiantil en la Universidad "Ejemplo" durante
+                        los
+                        últimos cuatro años, y mi experiencia ha sido increíblemente enriquecedora. Esta institución ha
+                        demostrado
+                        ser un lugar excepcional para el aprendizaje, el crecimiento personal y el desarrollo académico.
+                    </p>
+                </div>
 
-            <div class="col-lg-3 mb-4 perfil">
-                <img src="img/profile_logo.png" width="210px" alt="Profile Picture">
             </div>
+        </article>
 
+        <div class="listadocarreras">
 
+        </div>
 
-            <div class="botones ">
+    </main>
+    <section class="cuadroCarreras m-5 p-3">
 
+        <h1>Carreras</h1>
+        <div class="botones me-3">
+            <button type="button" class="btn btn-secondary btn-sm boton  mb-4" style="text-decoration: none"><a href="">Añadir carrera</a></button>
+        </div>
+        
+    
+        <div class="listadocarrera m-4">
+            <div class="carrera">
+                <h3>Licenciatura en Ingeniería de Software</h3>
+                <p>Años de Duración: 4</p>
+                <p>Modalidad: Presencial</p>
                 <button type="button" class="btn btn-secondary btn-sm boton  mb-4" style="text-decoration: none;
-"><a href="">Editar perfil</a></button>
-
-
-                <button type="button" class="btn btn-secondary btn-sm boton  mb-4 " style="text-decoration: none;
-"><a href="/register/register.html">Cerrar sesión</a></button>
-
+              "><a href="">Ver más</a></button>
             </div>
-
-    </section>
-
-    <section>
-
-        <div class="card mb-5">
-            <div class="card-body">
-
-                <h1>NOMBRE DE INSTITUCION</h1>
-                <p></p>
-                <p>[UBICACIÓN]</p>
-
-                <h2>Descripción del usuario</h2>
-                <h5 class="card-title"></h5>
-                <ul>
-                    <li>...</li>
-                    <li>...</li>
-                    <li>...</li>
-                    <li>...</li>
-                </ul>
+            <div class="carrera">
+                <h3>Técnico en Programación Web</h3>
+                <p>Años de Duración: 3</p>
+                <p>Modalidad: Virtual</p>
+                <button type="button" class="btn btn-secondary btn-sm boton  mb-4" style="text-decoration: none;
+              "><a href="">Ver más</a></button>
+            </div>
+            <div class="carrera">
+                <h3> Licenciatura en Administración de Empresas</h3>
+                <p>Años de Duración: 5</p>
+                <p>Modalidad: Semipresencial</p>
+                <button type="button" class="btn btn-secondary btn-sm boton  mb-4" style="text-decoration: none;
+              "><a href="">Ver más</a></button>
             </div>
         </div>
+        <div class="botones me-3">
+            <button type="button" class="btn btn-secondary btn-sm boton  mb-4" style="text-decoration: none"><a href="">Ver todas las Carreras</a></button>
+        </div>
+        
     </section>
 
-    <div class="card mb-5">
-
-        <div class="card-body">
-            <div class="config">
-                <h1>Historial de reseñas</h1>
-                <a class="navbar-brand" href="/home/home.html">
-                    <div class="editar"></div>
-                </a>
-            </div>
-
-            <p>Tuve el privilegio de ser parte de la comunidad estudiantil en la Universidad "Ejemplo" durante los
-                últimos cuatro años, y mi experiencia ha sido increíblemente enriquecedora. Esta institución ha
-                demostrado
-                ser un lugar excepcional para el aprendizaje, el crecimiento personal y el desarrollo académico.</p>
-        </div>
-
-    </div>
-
-
-
-</main>
-
-<%- include('./partials/footer.ejs'); %>
+    <%- include('./partials/footer.ejs'); %>
