--- a/views/register/register.ejs
+++ b/views/register/register.ejs
@@ -13,17 +13,23 @@
 <body>
   <main>
     <div class="Register">
-      <h1 class="Registrar">Registrate aquí</h1>
-      <form action="/home/home.html">
+      <h1 class="Registrar">Registrate tu institución</h1>
+      <form>
         <p>Nombre de la institución</p>
         <div class="input-group mb-3">
           <input type="text" class="form-control" aria-label="Recipient's username" aria-describedby="basic-addon2"
-            required placeholder="Instituto Politecnico Formosa" />
+            required placeholder="Instituto **********" />
+        </div>
+        <div class="container mb-3">
+          <div class="mb-1">
+            <label for="Image" class="form-label">Seleccione la foto de perfil de su instituto</label>
+            <input class="form-control" type="file" id="formFile">
+          </div>
+          <img id="frame" src="" class="img-fluid" />
         </div>
 
-        
         <p>Categoria</p>
-        <div class="input-group form-select mb-2">
+        <div class="input-group mb-2">
           <select class="form-select" name="categoria" id="categoria" value="categoria">
             <option value="1">Publica</option>
             <option value="2">Privada</option>
@@ -71,7 +77,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
-  <script src="register.js"></script>
+  <script src="/js/register-institute.js"></script>
 </body>
 
 </html>
