--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -3,7 +3,7 @@
     <header id="cabecera">
       <nav class="navbar navbar-expand-lg header ps-3">
         <div class="container-fluid">
-          <div class="logo"><a class="navbar-brand" href="home.html"></a></div>
+          <div class="logo"><a class="navbar-brand" href="/inicio"></a></div>
       </nav>
     </header>
     <main>
@@ -17,7 +17,7 @@
           <p>En UK, estamos comprometidos en brindarte el apoyo que necesitas para desbloquear tu potencial y alcanzar tus
             metas académicas. ¡Comienza a explorar ahora y prepárate para un futuro prometedor en el mundo del
             conocimiento!</p>
-            <a class="nav-link busqueda" href="<%= link %>">Empieza tu búsqueda</a>
+            <a class="nav-link busqueda" href="/inicio">Empieza tu búsqueda</a>
         </div>
         
         <div class="reseñas-cuadro">
