--- a/views/form.institute/partials/categoria-instituto.ejs
+++ b/views/form.institute/partials/categoria-instituto.ejs
@@ -1,7 +1,7 @@
 <div class="mb-3">
-    <label for="typeCareer" class="form-label">Tipo<span style="color: red;">*</span></label>
-    <select class="form-select selectTipoCarrera" name="typeCareer">
-        <option selected>Seleccione el tipo de carrera * </option>
+    <label for="category" class="form-label">Categoría<span style="color: red;">*</span></label>
+    <select class="form-select selectTipoCarrera" name="category">
+        <option selected>Seleccione la categoría * </option>
         <option value="1">Carrera de Pregrado</option>
         <option value="2">Carrera de Grado</option>
         <option value="3">Maestría</option>
