--- a/views/register/register.ejs
+++ b/views/register/register.ejs
@@ -13,8 +13,8 @@
 <body>
   <main>
     <div class="Register">
-      <h1 class="Registrar">Registrate tu institución</h1>
       <form>
+        <h1 class="Registrar">Registra tu institución</h1>
         <p>Nombre de la institución</p>
         <div class="input-group mb-3">
           <input type="text" class="form-control" aria-label="Recipient's username" aria-describedby="basic-addon2"
