Se agregó archivos relacionados al login

--- a/views/register/register.ejs
+++ b/views/register/register.ejs
@@ -13,7 +13,7 @@
 <body>
   <main>
     <div class="Register">
-      <form>
+      <form action="/register" method="post">
         <h1 class="Registrar">Registra tu institución</h1>
         <p>Nombre de la institución</p>
         <div class="input-group mb-3">
