--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar sesion</title>
-    <link rel="stylesheet" href="/public/css/login.css">
+    <link rel="stylesheet" href="css/login.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
     <main>
         <div class="login">
             <h1 class="iniciarS">Iniciar sesión</h1>
-            <form action="../home/home.html">
+            <form action="../home/home.html" method="post">
                 <div class="mb-3">
                   <label for="exampleInputEmail1" class="form-label">Email</label>
                   <input type="email" required class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
