--- a/public/css/search.css
+++ b/public/css/search.css
@@ -19,9 +19,25 @@ body {
   top: 0;
   background-color: rgb(237, 237, 237);
 }
-
+.logo {
+  background-image: url(../img/home/logo.png);
+  width: 45px;
+  height: 45px;
+  background-size: cover;
+  transition: 0.1s ease-in-out;
+}
+.logo:hover {
+  transform: scale(1.2);
+  background-image: url(../img/home/logo_hover.png);
+}
 header li {
   font-size: 30px;
+}
+.preguntas-frecuentes {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-right: 10px;
 }
 main {
   display: flex;
