--- a/views/formInstitute/register-institute.ejs
+++ b/views/formInstitute/register-institute.ejs
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registra tu institución</title>
+    <title>Registra tu institucion</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="icon" href="./img/home/logoConFondo.png" type="image/x-icon">
 </head>
 <body>
     <main>
