--- a/views/home/partials/header.ejs
+++ b/views/home/partials/header.ejs
@@ -9,7 +9,22 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/home.css">
-  <link rel="icon" href="./img/home/logo.png" type="image/x-icon">
+  <link rel="icon" href="./img/home/logoConFondo.png" type="image/x-icon">
 </head>
 
 <body>
+  <header id="cabecera" class="d-flex justify-content-between align-content-center">
+    <nav aria-label="breadcrumb d-flex align-content-center">
+      <ol class="breadcrumb p-2 m-0 ps-3 d-flex justify-content-between">
+        <li class="breadcrumb-item">
+          <a class="navbar-brand" href="/">
+            <div class="logo"></div>
+          </a>
+        </li>
+      </ol>
+    </nav>
+    <div class="preguntas-frecuentes">
+      <a href="/preguntas-frecuentes"><img src="./img/home/question-mark-vector-icon.png" style="width: 30px;"
+          alt="Ayuda"></a>
+    </div>
+  </header>
