--- a/views/search/partials/footer.ejs
+++ b/views/search/partials/footer.ejs
@@ -1,7 +1,7 @@
 
-<script  src="main.js" type="module"></script>
+<script  src="./js/main.js" type="module"></script>
 <script src="models/universidad.js" type="module"></script>
-<script src="./JS/busqueda.js" type="module"></script>
+<script src="./js/busqueda.js" type="module"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
   crossorigin="anonymous"></script>
