--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -15,8 +15,8 @@
             <h1 class="iniciarS">Iniciar sesión</h1>
             <form action="index.ejs" method="post">
                 <div class="mb-3">
-                  <label for="exampleInputEmail1" class="form-label">Usuario</label>
-                  <input type="text" required class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                  <label for="username" class="form-label">Usuario</label>
+                  <input type="text" required class="form-control" id="username" aria-describedby="emailHelp">
                   <div id="username" name="username" class="form-text">Nunca compartiremos tu información con nadie</div>
                 </div>
                 <div class="mb-3">
