se modificaron paginas

--- a/views/formInstitute/partials/categoryInstitute.ejs
+++ b/views/formInstitute/partials/categoryInstitute.ejs
@@ -2,10 +2,8 @@
     <label for="category" class="form-label">Categoría<span style="color: red;">*</span></label>
     <select class="form-select selectTipoCarrera" name="category">
         <option selected>Seleccione la categoría * </option>
-        <option value="1">Carrera de Pregrado</option>
-        <option value="2">Carrera de Grado</option>
-        <option value="3">Maestría</option>
-        <option value="4">Especialización</option>
-        <option value="5">Diplomatura</option>
+        <option value="1">Publico</option>
+        <option value="2">Privado</option>
+        <option value="3">Semi-Privado</option>
     </select>
 </div>
