--- a/views/formInstitute/partials/ubicationInstitute.ejs
+++ b/views/formInstitute/partials/ubicationInstitute.ejs
@@ -3,6 +3,9 @@
     <label for="province" class="form-label">Provincia</label>
     <select class="form-select" id="province" name="province">
         <option selected>Selecciona una provincia</option>
+        <div id="provinces">
+
+        </div>
     </select>
 
     <label for="locality" class="form-label">Localidad</label>
