--- a/views/formInstitute/register-career.ejs
+++ b/views/formInstitute/register-career.ejs
@@ -12,8 +12,8 @@
                 <input type="text" class="form-control inputNombreCarrera" placeholder="Ingeniería en *****" id="name">
             </div>
             
-                <%- include('./partials/tipo-carrera.ejs'); %>
-                <%- include('./partials/modalidad.ejs'); %>
+                <%- include('./partials/typeCareer.ejs'); %>
+                <%- include('./partials/modality.ejs'); %>
 
                 <div class="mb-3 apartado2">
                     <div class="me-3 start_date">
