--- a/views/formInstitute/register-institute.ejs
+++ b/views/formInstitute/register-institute.ejs
@@ -6,27 +6,32 @@
     <title>Registra tu institucion</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/register-institute.css">
     <link rel="icon" href="./img/home/logoConFondo.png" type="image/x-icon">
 </head>
 <body>
     <main>
         <form class="formAgregarInstituto p-3" id="formAgregarInstituto">
             <h2 class="mb-3">Registra tu institución</h2>
-            <div class="mb-3">
-                <label for="name" class="form-label">Nombre de la institución<span
-                        style="color: red;">*</span></label>
-                <input type="text" placeholder="Instituto politecnico" class="form-control" name="name">
-            </div>
-            <label for="abbreviation" class="form-label">Abreviatura<span style="color: red;">*</span></label>
-            <div class="mb-3">
-                <input type="text" class="form-control" placeholder="IPF" id="abbreviation">
+            <div class="nombres">
+                <div class="nombre">
+                    <label for="name" class="form-label">Nombre de la institución<span
+                            style="color: red;">*</span></label>
+                    <input type="text" placeholder="Instituto politecnico" class="form-control" name="name">
+                </div>
+                <div>
+                    <label for="abbreviation" class="form-label">Abreviatura<span style="color: red;">*</span></label>
+                    <div class="mb-3">
+                        <input type="text" class="form-control" placeholder="IPF" id="abbreviation">
+                    </div>
+                </div>
             </div>
             
-                <%- include('./partials/categoria-instituto.ejs'); %>
+                <%- include('./partials/categoryInstitute'); %>
 
-                <%- include('./partials/ubicacion.ejs'); %>
+                <%- include('./partials/ubicationInstitute.ejs'); %>
 
-                <%- include('./partials/contacto.ejs'); %>
+                <%- include('./partials/contact.ejs'); %>
 
 
                 <div class="mb-3">
@@ -44,5 +49,6 @@
 
         </form>
     </main>
+    <script src="./js/register-institute"></script>
 </body>
 </html>
