en proceso de hacer register-institute 1/3

--- a/views/formInstitute/register-institute.ejs
+++ b/views/formInstitute/register-institute.ejs
@@ -49,6 +49,6 @@
 
         </form>
     </main>
-    <script src="./js/register-institute"></script>
+    <script src="./js/register-institute.js"></script>
 </body>
 </html>
