primer parte del login funcional

--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -13,7 +13,7 @@
     <main>
         <div class="login">
             <h1 class="iniciarS">Iniciar sesión</h1>
-            <form action="index.ejs" method="post">
+            <form action="/iniciar-sesion" method="POST">
                 <div class="mb-3">
                   <label for="username" class="form-label">Usuario</label>
                   <input type="text" required class="form-control" id="username" aria-describedby="emailHelp">
